--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <h1>Welcome to XiaoLing's portfolio</h1>
         <h2>Feel free to check out my projects below! </h2>
-        <a href="html/assignment1-index.html"><h2>Cartoon project</h2></a>
+        <a href="HtmlAndJs/assignment1-index.html"><h2>Cartoon project</h2></a>
     </div>
 </body>
 </html>
