--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XiaoLing Huang's Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div>
         <h1>Welcome to XiaoLing's portfolio</h1>
         <h2>Feel free to check out my projects below! </h2>
-        <a href="HtmlAndJs/assignment1-index.html"><h2>Cartoon project</h2></a>
+        <a href="./assignment1-index.html"><h2>Cartoon project</h2></a>
     </div>
 </body>
 </html>
