--- a/assignment1-index.html
+++ b/assignment1-index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <canvas id="myCanvas" width="800" height="500"></canvas>
-  <a href="./index.html"><h2>Click here to return to main page!</h2></a>
-  <script src="./assignment1-index.js"></script>
+  <a href="index.html"><h2>Click here to return to main page!</h2></a>
+  <script src="assignment1-index.js"></script>
 </body>
 </html>
