--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>Welcome to XiaoLing's portfolio</h1>
+        <h1>Welcome to XiaoLing Huang's portfolio</h1>
         <h2>Feel free to check out my projects below! </h2>
         <a href="assignment1-index.html"><h2>Cartoon project</h2></a>
     </div>
